--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,4 +15,5 @@ jobs:
         python -m pip install --upgrade pip
         pip install . pytest
     - name: Test
-      uses: skx/github-action-tester@master
+      run: |
+        pytest test/test_*
